Add agentuser id to list of params
