# src/Microsoft.Identity.Web.Sidecar/Endpoints/AuthorizationHeaderEndpoint.cs
@@ -96,7 +96,7 @@ public static class AuthorizationHeaderEndpoint
                 statusCode: StatusCodes.Status400BadRequest);
         }
 
-        AgentOverrides.SetOverrides(options, requestParameters.AgentIdentity, requestParameters.AgentUsername);
+        AgentOverrides.SetOverrides(options, requestParameters.AgentIdentity, requestParameters.AgentUsername, requestParameters.AgentUserId);
 
         string authorizationHeader;
 
